@@ -296,7 +296,7 @@ typedef struct awk_two_way_processor {
 	awk_const struct awk_two_way_processor *awk_const next;  /* for use by gawk */
 } awk_two_way_processor_t;
 
-#define gawk_api_major_version 2
+#define gawk_api_major_version 3
 #define gawk_api_minor_version 0
 
 /* Current version of the API. */
@@ -458,6 +458,9 @@ typedef void *awk_ext_id_t;	/* opaque type for extension id */
 /*
  * The API into gawk. Lots of functions here. We hope that they are
  * logically organized.
+ *
+ * !!! If you make any changes to this structure, please remember to bump !!!
+ * !!! gawk_api_major_version and/or gawk_api_minor_version.              !!!
  */
 typedef struct gawk_api {
 	/* First, data fields. */
