@@ -1,3 +1,11 @@
+2019-07-08         Andrew J. Schorr      <aschorr@telemetry-investments.com>
+
+	* gawkapi.h (gawk_api_major_version): Bump from 2 to 3 because the
+	namespace changes altered the function signatures in gawk_api_t.
+	And add a comment at the top of the structure with a reminder that
+	the version number should be bumped whenever the struct is altered
+	in any way.
+
 2019-06-30         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* interpret.h (r_interpret): Fix two more cases of warning
